# flask-cms

./: .gitignore  README.md  pyproject.toml
Controllers/: __init__.py
Controllers/Socket/: HandlerController.py  __init__.py
Controllers/Web/: HomeController.py  __init__.py
Controllers/Web/Admin/: __init__.py  add.py  upload.py
Controllers/Web/Login/: ADLoginController.py  LocalLoginController.py  OpenIdLoginController.py  __init__.py
Models/: ModelsRegistry.py
Models/Forms/: __init__.py  edit.py  login.py  plugins.py  upload.py
Models/Persistant/cms/: contents.py  plugins.py  settings.py
Models/Persistent/: __init__.py
Models/Persistent/cms/: __init__.py  base.py  contents.py  (+4 more)
Server/: Socket.py  Web.py  __init__.py
controllers/: __init__.py
controllers/web/: __init__.py  home.py
flask_cms/: __init__.py  views.py
flask_cms/controllers/: __init__.py
flask_cms/server/: __init__.py  errorhandler.py  middleware.py  socket.py  web.py  ws.py
flask_cms/utils/: __init__.py
models/: __init__.py
models/forms/: __init__.py  edit.py  login.py  plugins.py  theme.py  upload.py
models/persistent/: __init__.py
server/: __init__.py  errorhandler.py  middleware.py  socket.py  web.py  ws.py
static/: saml-sp-metadata.xml
static/css/: app.css
template/: 40x.html  50x.html  welcome.html
template/admin/: gui.html  login.html  medias.html  menu.html
template/layout/: admin.html
template/login/: index.html  ldap.html
template/logins/: base.html  ldap.html
utils/: __init__.py
utils/mapper/: __init__.py  finder.py  openid.py  saml.py
(+130 files in other folders)
